--- a/Clase/CSS/style.css
+++ b/Clase/CSS/style.css
@@ -14,3 +14,6 @@ strong{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 15px;
 }
+h1{
+    color: gray;
+}
