--- a/Clase/Clase 1/CSS/style.css
+++ b/Clase/Clase 1/CSS/style.css
@@ -48,12 +48,7 @@ dt {
 footer {
     color: #fff;
     background-color: #ff5722; 
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 20px;
     text-align: center;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
 }
 
 .destacado {
@@ -78,7 +73,24 @@ a:hover {
 }
 
 .container{
-    width: 80%;
+    width: 70%;
     margin: auto;
     overflow: hidden;
+}
+.clasespan{
+    color: #e74c3c;
+    font-size: 1em;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 11px;
+    margin-bottom: 10px;
+}
+.boton {
+    color: chartreuse;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: #d35400;
 }
