--- a/Clase/Portafolio/CSS/style.css
+++ b/Clase/Portafolio/CSS/style.css
@@ -20,3 +20,17 @@ body {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+footer {
+    background-color: #2c3e50;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+h1 {
+    color: #2c3e50;
+    text-align: center;
+    margin-top: 20px;
+}
