--- a/Clase/Clase 1/CSS/style.css
+++ b/Clase/Clase 1/CSS/style.css
@@ -89,9 +89,15 @@ a:hover {
 .boton {
     color: chartreuse;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    font-size: 20
+    px;
     font-weight: bold;
     border-radius: 5px;
     cursor: pointer;
     background-color: #d35400;
+}
+
+.sidebar { width: 25%; 
+    background-color: #f4f4f4; 
+     padding: 20px; 
 }
