--- a/Clase/Clase 1/CSS/style.css
+++ b/Clase/Clase 1/CSS/style.css
@@ -1,10 +1,13 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #e0f7fa; /* Fondo azul claro */
+    background-color: #e0f7fa; 
     color: #333;
     margin: 0;
     padding: 0;
 }
+
+* { 
+}/* universal */
 
 p {
     color: #333;
@@ -89,8 +92,7 @@ a:hover {
 .boton {
     color: chartreuse;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 20
-    px;
+    font-size: 20px;
     font-weight: bold;
     border-radius: 5px;
     cursor: pointer;
@@ -100,4 +102,50 @@ a:hover {
 .sidebar { width: 25%; 
     background-color: #f4f4f4; 
      padding: 20px; 
+}
+
+p > h6{
+    color: #333;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    line-height: 1.6;
+}
+
+div li{
+    color: #333;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    line-height: 1.6;
+}
+.flextyle{
+    display: flex;
+    border-style: dashed;
+    border-color: blue;
+    border-inline: #ff5722;
+    border-width: 7px;
+    background-color: #ff5722;
+    justify-content:space-between ;
+}
+.login{
+    border-style: double;
+    border-color: darkblue;
+    background-color: ivory;
+    text-align: start;
+}
+.tableStyle {
+    border: 3px double #d35400;
+    width: 40%;
+    border-collapse: collapse;
+}
+
+th {
+    border: 2px solid #d35400;
+    background-color: darkorange;
+    padding: 10px;
+}
+
+td {
+    border: 2px solid #d35400;
+    background-color: #f4f4f4;
+    padding: 10px;
 }
