--- a/Prueba/CSS/styles-Tienda.css
+++ b/Prueba/CSS/styles-Tienda.css
@@ -13,7 +13,9 @@ body {
 
 .pie {
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
+    align-items: center;
     background-color: #4682b4;
     color: white;
 }
@@ -32,9 +34,9 @@ body {
     text-align: center;
 }
 
-.main-content {     
+.main-content {    
     background: cornsilk;
-    width: 70%;
+    width: 90%;
     padding: 50px;
     color: #333;
 }
@@ -126,4 +128,35 @@ a:hover {
     margin: 10px auto;
     width: 80%; 
 
+}
+.asai{
+    right: 1%;
+    position: fixed;
+    background-color: #d35400;
+    padding: 20px;
+    height: 500px;
+    width: 13%;
+    border-radius: 5px;
+    border: 2px solid black; 
+  
+}
+.textoooo{
+    width: 200px;
+    height: 180px;
+    border-radius: 5px;
+    border: 2px solid black; 
+    margin-bottom: 20px; 
+
+}
+.enviar {
+    padding: 10px;
+    background: rgb(193,7,231);
+    background: linear-gradient(90deg, rgba(193,7,231,1) 16%, rgba(255,0,0,1) 100%);    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    margin: 10px auto;
 }
