--- a/Deberes/Parcial 1/Card/CSS/card.css
+++ b/Deberes/Parcial 1/Card/CSS/card.css
@@ -47,7 +47,7 @@ body {
     z-index: -1;
     opacity: 0;
     transition: opacity 0.3s ease;
-    background: linear-gradient(90deg, rgba(50,0,133,1) 26%, rgba(2,255,235,1) 100%);
+    background-color: #000;
     pointer-events: none;
     
 }
