--- a/Clase/Ejercicio 2/CSS/articulo.css
+++ b/Clase/Ejercicio 2/CSS/articulo.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-image: ;
+    background-image: url(../Image/Gatofondo.png);
 }
 
 .header {
@@ -40,7 +40,7 @@ body {
 
 .article {
     display: flex;
-    background-color: white;
+    background-color: rgb(11, 147, 172);
     margin-bottom: 2rem;
     border-radius: 8px;
     overflow: hidden;
@@ -88,7 +88,7 @@ border-radius: 8px;
 
 .sidebar {
     flex: 1;
-    background-color: white;
+    background-color: rgb(24, 101, 165);
     padding: 1rem;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
